<resources>
    <string name="app_name">Accuweather</string>
    <string name="celsius_degree">℃</string>
    <string name="degree">°</string>
    <string name="air_quality_index_main">ИКВ</string>
    <string name="detail_button_title">Подробнее ⟩</string>
    <string name="text_separator">•</string>
    <string name="ok">OK</string>

    <string name="permission_rationale">Разрешение на местоположение необходимо для основных функций.</string>
    <string name="permission_denied_explanation">В разрешении было отказано, но оно необходимо для основных функций.</string>
    <string name="location_alert_explanations">Нам нужно ваше местоположение по GPS, чтобы корректно отображать погоду.</string>
    <string name="mock">--</string>
    <string name="settings">Настройки</string>
    <string name="refresh">обновить</string>
    <string name="getting_location">Определение местоположения…</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="location_settings">Настройки местоположения</string>
    <string name="location_settings_message">Определение местоположения отключено. Перейти в меню настроек?</string>
    <string name="location_settings_button">Настройки</string>
    <string name="getting_data_from_server">Получение данных с сервера…</string>
    <string name="communication_error">Ошибка в получении данных.</string>
    <string name="today">сегодня</string>
    <string name="tomorrow">завтра</string>
    <string name="explanation_for_location_dialogue">Приложению для корректной работы требуется включить местоположение.</string>
    <string name="aqi">41</string>
    <string name="air_quality_index">Индекс качества воздуха</string>
    <string name="data_provided">Данные предоставлены</string>
    <string name="accuweather">accuweather</string>
    <string name="now">сейчас</string>
    <string name="wind_speed_measuring">км/ч</string>
    <string name="sunrise">Восход</string>
    <string name="sunset">Закат</string>
    <string name="felt">Ощущяется</string>
    <string name="humidity">Влажность</string>
    <string name="chance_of_rain">Вероятность дождя</string>
    <string name="pressure">Давление</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="UV_index">Индекс УФ</string>
    <string name="percent">%</string>
    <string name="humidity_value">50%</string>
    <string name="pressure_value">hPa</string>
</resources>