<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLauout_fragmentMain_mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".view.fragment.MainFragment">

    <TextView
        android:id="@+id/textView_mainFragment_todayTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock"
        android:textColor="@color/white"
        android:textSize="150sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/textView_mainFragment_degreeHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/celsius_degree"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView_mainFragment_todayTemperature"
        app:layout_constraintTop_toTopOf="@+id/textView_mainFragment_todayTemperature" />

    <TextView
        android:id="@+id/textView_mainFragment_todayDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mainFragment_todayTemperature" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_mainFragment_airQualityIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/cardView_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mainFragment_todayDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imageView_mainFragment_iconHolder"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_leaf"
                tools:ignore="VectorDrawableCompat" />


            <TextView
                android:id="@+id/textView_mainFragment_air_quality_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@string/air_quality_index_main"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_mainFragment_today_airQualityIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mock"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_mainFragment_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:text="@string/detail_button_title"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_mainFragment_airQualityIndex"
        app:layout_constraintVertical_bias="0.191" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_mainFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mainFragment_details" />

    <TextView
        android:id="@+id/textView_mainFragment_cityHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16pt"
        android:text="@string/mock"
        app:layout_constraintBottom_toTopOf="@+id/textView_mainFragment_todayTemperature"
        app:layout_constraintEnd_toEndOf="@+id/textView_mainFragment_todayTemperature"
        app:layout_constraintStart_toStartOf="@+id/textView_mainFragment_todayTemperature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>