<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_detailsFragment_mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_fragmentDetails_hourly_forecast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardView_detailsFragment_mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardView_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_fragmentDetails_hourly_forecast">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_detailsFragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView_detailsFragment_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/sunset"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/textView_detailsFragment_sunset_value"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_fragmentDetails" />

            <ProgressBar
                android:id="@+id/progressBar_fragmentDetails"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_detailsFragment_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/sunrise"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_fragmentDetails" />

            <TextView
                android:id="@+id/textView_detailsFragment_sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/textView_detailsFragment_sunrise"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_fragmentDetails" />

            <TextView
                android:id="@+id/textView_detailsFragment_sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_fragmentDetails" />

            <GridView
                android:id="@+id/gridView_fragmentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:numColumns="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_fragmentDetails" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_detailsFragment_aqiContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardView_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_detailsFragment_mainContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_detailsFragment_aqiContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_detailsFragment_air_quality_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/air_quality_index"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_fragmentDetails_ic_holder"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_detailsFragment_air_quality_index"
                app:srcCompat="@drawable/ic_leaf"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView_detailsFragment_air_quality_index_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_fragmentDetails_ic_holder"
                app:layout_constraintTop_toBottomOf="@+id/textView_detailsFragment_air_quality_index"
                tools:text="41" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/frameLayout_detailsFragment_footerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_detailsFragment_aqiContainer">


        <TextView
            android:id="@+id/textView_detailsFragment_footer_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/data_provided"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/imageView_mainFragment_footer_ic"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/ic_sunny"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView_detailsFragment_footer_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>